Field UI alignment fix

--- a/styles/base/_field-ui.scss
+++ b/styles/base/_field-ui.scss
@@ -10,8 +10,9 @@
 .field-option {
   --thumb-size: 5rem;
 
+  gap: var(--gin-spacing-m);
   align-items: baseline;
-  padding: 0 var(--gin-spacing-l) 0 0;
+  padding: 0;
   background-color: transparent;
   border: 1px solid var(--gin-border-color);
   border-radius: var(--gin-border-m);
@@ -33,6 +34,7 @@
   }
 
   &__item {
+    column-gap: 0;
     padding-block: var(--gin-spacing-s);
 
     .form-item__label {
@@ -42,6 +44,7 @@
 
   & &__description {
     font-size: var(--gin-font-size-xs);
+    line-height: 1.3;
     color: var(--gin-color-text-light);
   }
 
